# MACHAN

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: TCalcFuncSets.cpp  indicators.cpp  main.cpp
